<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_16dp"
    tools:context=".ui.AddEditTodoActivity">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        android:inputType="text|textCapSentences" />

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine|textCapSentences" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/label_priority_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <NumberPicker
                android:id="@+id/numberpicker_priority"
                style="@style/MyNumberPickerTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp" />

            <TextView
                android:id="@+id/label_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:text="@string/label_category_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_weight=".2"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/image_button_alarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:background="@android:color/transparent"
                android:contentDescription="@string/notification_icon"
                android:padding="@dimen/padding_8dp"
                android:src="@drawable/ic_reminder" />

            <TextView
                android:id="@+id/label_remind_me"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="start"
                android:paddingLeft="@dimen/padding_8dp"
                android:paddingTop="@dimen/padding_8dp"
                android:paddingRight="@dimen/padding_8dp"
                android:paddingBottom="@dimen/padding_8dp"
                android:text="@string/remind_me"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchcompat_set_reminder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding_8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_weight="0.3"
            android:gravity="top"
            android:id="@+id/reminder_layout"
            android:visibility="invisible">

            <EditText
                android:id="@+id/edit_text_reminder_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/hint_choose_date"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:inputType="date"
                android:textIsSelectable="false" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:gravity="center"
                android:padding="@dimen/padding_4dp"
                android:text="@string/at_symbol"
                android:textColor="?attr/colorAccent" />

            <EditText
                android:id="@+id/edit_text_reminder_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:editable="false"
                android:hint="@string/hint_choose_time"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:inputType="time"
                android:textIsSelectable="false" />
        </LinearLayout>

</LinearLayout>