<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardview_todo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_8dp"
    android:layout_marginTop="@dimen/margin_8dp"
    android:layout_marginEnd="@dimen/margin_8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/todo_item_priority"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/todo_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@id/todo_item_priority"
            android:layout_toLeftOf="@id/todo_item_priority"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/placeholder_todoitem_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/todo_item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/todo_item_title"
            android:text="@string/placeholder_todoitem_description" />

        <TextView
            android:id="@+id/todo_item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/todo_item_description"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@string/placeholder_todoitem_category"
            android:lineSpacingExtra="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#fff"
            android:paddingStart="@dimen/padding_10dp"
            android:paddingEnd="@dimen/padding_10dp"
            />

        <TextView
            android:id="@+id/todo_item_label_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/todo_item_category"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorAccent"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/todo_item_reminder_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/todo_item_category"
            android:layout_alignStart="@id/todo_item_category"
            android:layout_alignLeft="@id/label_reminder_todoitem"
            android:layout_alignParentRight="true"
            android:layout_marginRight="24dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:id="@+id/label_reminder_todoitem"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/todo_item_description"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_reminder"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:visibility="invisible" />
    </RelativeLayout>

    <View
        android:id="@+id/divider_category"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1dp"
        android:layout_below="@id/cardview_todo"
        android:layout_marginTop="@dimen/margintop_2dp"
        android:background="@android:color/darker_gray"
        android:visibility="invisible" />

</android.support.v7.widget.CardView>